added: done with tutorials

--- a/website/src/content/docs/tutorials/basic-usage.mdx
+++ b/website/src/content/docs/tutorials/basic-usage.mdx
@@ -48,6 +48,7 @@ const { up } = await compose({
 When you run this code, you should see the following output in the console:
 
 ```sh
+> npm start
 The chef is already on the way!
 ```
 
