--- a/website/src/content/docs/tutorials/dependencies.mdx
+++ b/website/src/content/docs/tutorials/dependencies.mdx
@@ -80,6 +80,7 @@ up();
 When you run this code, you should see the following output in the console:
 
 ```sh
+> npm start
 dough + sauce + cheese = pizza
 ```
 
@@ -109,6 +110,7 @@ const { up } = await compose({
 When you run this code, you should see the following output in the console:
 
 ```sh
+> npm start
 olives + dough + sauce + cheese = pizza
 ```
 
