--- a/website/src/content/docs/tutorials/enable.mdx
+++ b/website/src/content/docs/tutorials/enable.mdx
@@ -98,7 +98,7 @@ Try modifying `hasCheese` and see what happens.
 
 We’ve learned how to control when containers start using enable. This helps start containers only when needed.
 
-But what if you want to control the order of starting containers?
+But what if you want to control the priority of starting containers?
 Sometimes, one container should start before another, even if they are not connected.
 
 This is where `stages` help. They let you group containers and choose the order they start.
