added: part of stages

--- a/website/src/content/docs/tutorials/stages.mdx
+++ b/website/src/content/docs/tutorials/stages.mdx
@@ -12,6 +12,8 @@ In real applications, some things are more important, and some are less importan
 It’s a good idea to **load and start important things first**, and then start the less important ones.<br />
 This helps your app start in the right priority and feel better for the user.
 
+Each stage has a name and a list of containers to start. The stages run in order, so you can decide which containers start first and which start next.
+
 ## Analogy from Cooking
 
 Imagine you’re preparing a meal. You need to make **the main course** and **dessert**.
