--- a/website/src/content/docs/reference/create-container.mdx
+++ b/website/src/content/docs/reference/create-container.mdx
@@ -17,27 +17,31 @@ createContainer(config: ContainerConfig): Container
 - _config_: `ContainerConfig` — configuration object for the container
 
   - **id** (`string`) - Required. Unique identifier of the container.
-  - **start** (`(deps?: DepsApi, optDeps?: OptionalDepsApi) => { api: {} }`) - Required. Initialization function of the container, invoked upon activation. Accepts strict (`dependsOn`) and optional (`optionalDependsOn`) dependencies and returns an object `{ api: {} }`.
+  - **domain** (`string`) - Required. A category for a container.
+  - **dependencies** (`Container[]`) - Optional. List of strict dependencies. These containers must be in the `done` status for the current container to transition to `pending`.
+  - **optionalDependencies** (`Container[]`) - Optional. List of optional dependencies. These containers can be in the `done`, `fail`, or `off` status for the current container to activate.
+  - **start** (`(api?: DepsApi & OptionalDepsApi, enabled: {keyof api: boolean}) => { api: {} }`) - Required. Initialization function of the container, invoked upon activation.
+    - Accepts:
+      - api (optional) — an object with APIs from required and optional dependencies.
+      - enabled (optional) — an object showing which dependencies are enabled (true) or not (false).
+    - Returns: an object with an api property, which contains data or methods that other containers can use.
   - **enable** (`() => boolean | Promise<boolean>`) - Optional. Function that determines if the container will be activated. Returns `true` to activate the container, and `false` to set the container to `off`.
-  - **dependsOn** (`Container[]`) - Optional. List of strict dependencies. These containers must be in the `done` status for the current container to transition to `pending`.
-  - **optionalDependsOn** (`Container[]`) - Optional. List of optional dependencies. These containers can be in the `done`, `fail`, or `off` status for the current container to activate.
+    - Accepts:
+      - api (optional) — an object with APIs from required and optional dependencies.
+      - enabled (optional) — an object showing which dependencies are enabled (true) or not (false).
+    - Returns: `boolean | Promise<boolean>`
 
 ## Example
 
 ```ts
 const userContainer = createContainer({
   id: 'user',
-  start: (deps, optDeps) => {
-    // Dependencies from authDeps can be used here if provided
+  domain: 'users',
+  dependencies: ['auth'],
+  optionalDependencies: ['settings'],
+  start: () => {
     return { api: { getUser: () => ({ id: 1, name: 'John Doe' }) } };
   },
-  enable: () => true, // Container is always enabled
-  deps: ['auth'], // Dependency on the auth container
-  optDeps: ['settings'], // Optional dependency on the settings container
+  enable: () => true,
 });
 ```
-
-## Features and Notes
-
-- **Optional enable parameter**: If `enable` is not specified, the container is considered activated by default.
-- **Dependency handling**: `dependsOn` and `optionalDependsOn` control the activation order and conditions, referring to other containers.
