--- a/website/src/content/docs/reference/changelog.mdx
+++ b/website/src/content/docs/reference/changelog.mdx
@@ -7,6 +7,12 @@ sidebar:
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](http://semver.org).
 
+## 2.0.1
+
+### Fixed
+
+- `graph` return value
+
 ## 2.0.0
 
 Vault
